--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="form__underpass">
             <div class="form__checkbox">
               <input type="checkbox" name="remember" id="rememberPass" />
-              <label for="remember">Remember me</label>
+              <label for="rememberPass">Remember me</label>
             </div>
 
             <a href="#" class="form__link-forgot">Forgot password?</a>
